# gccphat

./: CMakeLists.txt  README.md
bash/: batch.sh  test_all.sh
demo/: gccphat.c  main.c  simulate.c
include/: CMakeLists.txt
include/gccphat/: gccphat.h
include/gccphat/utils/: eig.h  gramschmidt.h  householder.h  matrix.h  qr.h  scalar.h  svd.h  vector.h
include/gccphat_fft/: gccphat_fft.h
include/gccphat_fft/utils/: gpfft.h  gpfftqi.h
include/gccphat_mm/: gccphat_mm.h
include/gccphat_mm/utils/: gpmm.h
include/gccphat_svd/: gccphat_svd.h
include/gccphat_svd/utils/: gpsvd.h  matrix.h  svd.h
matlab/: analyze.m  demo_analyze.m  demo_simulate.m  full2half.m  generate_doa.m  generate_rir.m  generate_room.m  generate_stft.m  half2full.m  import_results.m  simulate.m
src/gccphat_fft/utils/: gpfft.c  gpfftqi.c
src/gccphat_mm/utils/: gpmm.c
src/gccphat_svd/utils/: gpsvd.c  matrix.c  svd.c
src/utils/: eig.c  gramschmidt.c  householder.c  matrix.c  qr.c  scalar.c  svd.c  vector.c
